--- a/settings.gradle
+++ b/settings.gradle
@@ -16,3 +16,5 @@ dependencyResolutionManagement {
 rootProject.name = "MyNote"
 include ':app'
 include ':core'
+include ':utils'
+include ':domain'
