--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation project(path: ':core')
     implementation project(path: ':utils')
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'io.mockk:mockk:1.12.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
