create screen detail

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
@@ -10,15 +11,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyNoteNoActionBar">
         <activity
-            android:name=".ui.NoteActivity"
+            android:name=".ui.main_activity.MainActivity"
             android:windowSoftInputMode="adjustResize"
             android:exported="false" />
         <activity
-            android:name=".ui.main_activity.MainActivity"
-            android:exported="true">
+            android:name=".ui.splash.ActivitySplash"
+            android:exported="true"
+            android:screenOrientation="fullSensor"
+            android:theme="@style/Theme.customSplash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
