--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,7 +59,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    implementation "me.leolin:ShortcutBadger:1.1.22@aar"
 
+    implementation "androidx.core:core-splashscreen:1.0.0"
 
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
 
