--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,8 @@ dependencies {
     implementation 'jp.wasabeef:glide-transformations:4.3.0'
     // If you want to use the GPU Filters
     implementation 'jp.co.cyberagent.android:gpuimage:2.1.0'
+
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
 
 kapt {
