--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,13 @@ dependencies {
     implementation 'jp.co.cyberagent.android:gpuimage:2.1.0'
 
     implementation 'com.google.code.gson:gson:2.10.1'
+
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.9.0"
+    testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0")
+    testImplementation 'org.mockito:mockito-core:3.10.0'
+    testImplementation "org.mockito:mockito-inline:2.13.0"
+
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 }
 
 kapt {
