--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,7 @@ dependencies {
     testImplementation "org.mockito:mockito-inline:2.13.0"
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
+    implementation "androidx.paging:paging-runtime-ktx:3.1.0"
 }
 
 kapt {
