--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,7 @@ dependencies {
     implementation 'jp.co.cyberagent.android:gpuimage:2.1.0'
 
     implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
 
     testImplementation "com.squareup.okhttp3:mockwebserver:4.9.0"
     testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0")
